--- a/config/database.yml
+++ b/config/database.yml
@@ -77,6 +77,11 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+
+staging:
+  <<: *default
+  url: <%= ENV['DATABASE_URL'] %>
+
 production:
   primary: &primary_production
     <<: *default
