--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,3 +31,16 @@ updates:
       - "gmmcal"
     reviewers:
       - "gmmcal"
+  - package-ecosystem: github-actions
+    directory: "/"
+    open-pull-requests-limit: 50
+    commit-message:
+      prefix: "OPT"
+    schedule:
+      interval: "daily"
+      time: "08:00"
+      timezone: "Europe/Amsterdam"
+    assignees:
+      - "gmmcal"
+    reviewers:
+      - "gmmcal"
