--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,10 +5,13 @@ on:
     branches:
       - main
 
+permissions:
+  contents: write
+
 jobs:
   tag:
     name: "Tag: Production"
-    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_tag.yml@v0
+    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_tag.yml@v1
     concurrency:
       group: tag
       cancel-in-progress: false
@@ -17,8 +20,7 @@ jobs:
 
   release:
     name: Release
-    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_release.yml@v0
-    secrets: inherit
+    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_release.yml@v1
     needs:
       - tag
     with:
@@ -27,8 +29,10 @@ jobs:
 
   build_development:
     name: Build
-    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_docker.yml@v0
-    secrets: inherit
+    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_docker.yml@v1
+    secrets:
+      dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
+      dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
     concurrency:
       group: build-development
       cancel-in-progress: true
@@ -39,11 +43,13 @@ jobs:
 
   build_production:
     name: Build
-    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_docker.yml@v0
+    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_docker.yml@v1
     needs:
       - tag
       - release
-    secrets: inherit
+    secrets:
+      dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
+      dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
     concurrency:
       group: build-production
       cancel-in-progress: true
@@ -55,53 +61,21 @@ jobs:
 
   deploy:
     name: Deploy
-    runs-on: ubuntu-latest
-    concurrency:
-      group: release
-    environment:
-      name: production
-      url: https://www.gustavocunha.dev
+    uses: gmmcal/gmmcal-reusable-workflows/.github/workflows/_deploy.yml@v1
     needs:
       - tag
       - release
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v5
-        with:
-          ref: ${{needs.tag.outputs.version}}
-
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - uses: webfactory/ssh-agent@v0.9.1
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-          log-public-key: false
-
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "3.4"
-
-      - name: Install Kamal
-        run: gem install kamal -v 2.7.0 # lock version because of kamal proxy. Maybe consider adding kamal as a project dependency on a deploy group that will be installed on this action
-
-      - name: Deploy command
-        run: kamal deploy --version=${{needs.tag.outputs.version}}
-        env:
-          KAMAL_REGISTRY_PASSWORD: ${{ secrets.DOCKERHUB_TOKEN }}
-          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
-          DATABASE_HOST: ${{ secrets.DATABASE_HOST }}
-          DATABASE_USERNAME: ${{ secrets.POSTGRES_USER }}
-          DATABASE_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
-          # db setup
-          POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
-          POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
-          POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+    with:
+      name: Production
+      environment: production
+      url: https://www.gustavocunha.dev
+      tag: ${{ needs.tag.outputs.version }}
+    secrets:
+      dockerhub-username: ${{ secrets.DOCKERHUB_USERNAME }}
+      dockerhub-token: ${{ secrets.DOCKERHUB_TOKEN }}
+      ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      rails-master-key: ${{ secrets.RAILS_MASTER_KEY }}
+      database-host: ${{ secrets.DATABASE_HOST }}
+      postgres-user: ${{ secrets.POSTGRES_USER }}
+      postgres-password: ${{ secrets.POSTGRES_PASSWORD }}
+      postgres-db: ${{ secrets.POSTGRES_DB }}
