OPT: Add assignees to dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,8 @@ updates:
       interval: "daily"
       time: "08:00"
       timezone: "Europe/Amsterdam"
+    assignees:
+      - gmmcal
   - package-ecosystem: "npm"
     directory: "/"
     open-pull-requests-limit: 50
@@ -23,6 +25,8 @@ updates:
       interval: "daily"
       time: "08:00"
       timezone: "Europe/Amsterdam"
+    assignees:
+      - gmmcal
   - package-ecosystem: github-actions
     directory: "/"
     open-pull-requests-limit: 50
@@ -32,3 +36,5 @@ updates:
       interval: "daily"
       time: "08:00"
       timezone: "Europe/Amsterdam"
+    assignees:
+      - gmmcal
