NEW: Introduce Lexxy as WYSIWYG editor
Closes #109 and #111

Also changed:

* Introduce ActionText
* Move to propshaft
* Default to rails 8.1 settings
* Remove markdown
* Migrate data from old markdown to ActionText
* Cleanup what is not needed (migration files)
* Update fontawesome to latest version

--- a/config/deploy.template.yml
+++ b/config/deploy.template.yml
@@ -18,6 +18,7 @@ proxy:
 
 env:
   clear:
+    IS_PRODUCTION: "false"
     RAILS_LOG_TO_STDOUT: enabled
     RAILS_SERVE_STATIC_FILES: enabled
     DATABASE_NAME: #@ data.values.database
