--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -2,7 +2,7 @@
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
 # custom setup
-require:
+plugins:
   - rubocop-factory_bot
   - rubocop-rspec
   - rubocop-rspec_rails
