--- a/package.json
+++ b/package.json
@@ -42,16 +42,16 @@
     "ci-cd"
   ],
   "engines": {
-    "node": "^20.19.0",
-    "npm": "^10.2.4",
-    "yarn": "^4.5.0"
+    "node": "^24.13.1",
+    "npm": "^11.8.0",
+    "yarn": "^4.12.0"
   },
   "devDependencies": {
-    "@eslint/js": "*",
-    "cypress": "*",
-    "eslint": "*",
-    "globals": "*",
-    "start-server-and-test": "*"
+    "@eslint/js": "^10.0.1",
+    "cypress": "^15.10.0",
+    "eslint": "^10.0.0",
+    "globals": "^17.3.0",
+    "start-server-and-test": "^2.1.3"
   },
   "scripts": {
     "cypress:dev": "start-test server:start 3000 cypress:open",
@@ -62,5 +62,5 @@
     "eslint": "eslint --config=eslintrc.config.mjs app/javascript/**/**.js eslintrc.config.mjs cypress.config.js",
     "eslint:tests": "eslint --config=eslintrc.config.mjs spec/**/**.js"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.12.0"
 }
